# cove

./: CHANGELOG.md  Cargo.toml
.github/workflows/: build.yml
cove/: Cargo.toml
cove-config/: Cargo.toml
cove-config/src/: keys.rs  lib.rs
cove-input/: Cargo.toml
cove-input/src/: lib.rs
cove-macro/: Cargo.toml
cove/src/: logger.rs  main.rs  store.rs  ui.rs
cove/src/euph/: highlight.rs  room.rs  util.rs
cove/src/ui/: rooms.rs
cove/src/ui/chat/: cursor.rs  tree.rs
cove/src/ui/chat/tree/: renderer.rs  widgets.rs
cove/src/ui/euph/: account.rs  inspect.rs  links.rs  nick.rs  nick_list.rs  room.rs
cove/src/ui/widgets/: list.rs
src/ui/chat/tree/: cursor.rs
