[workspace]
resolver = "3"
members = ["cove", "cove-*"]

[workspace.package]
version = "0.9.3"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive", "deprecated"] }
cookie = "0.18.1"
cove = { path = "./cove" }
cove-config = { path = "./cove-config" }
cove-input = { path = "./cove-input" }
cove-macro = { path = "./cove-macro" }
crossterm = "0.28.1"
directories = "6.0.0"
edit = "0.1.5"
jiff = "0.2.24"
linkify = "0.11.0"
log = { version = "0.4.29", features = ["std"] }
open = "5.3.4"
parking_lot = "0.12.5"
proc-macro2 = "1.0.106"
quote = "1.0.45"
rusqlite = { version = "0.31.0", features = ["bundled", "time"] }
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
serde_either = "0.2.1"
serde_json = "1.0.149"
syn = "2.0.117"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
toml = "1.1.2"
unicode-width = "0.2.2"

[workspace.dependencies.euphoxide]
git = "https://git.plugh.de/Garmelon/euphoxide.git"
tag = "v0.6.1"
features = ["bot"]

[workspace.dependencies.toss]
git = "https://git.plugh.de/Garmelon/toss.git"
tag = "v0.3.4"

[workspace.dependencies.vault]
git = "https://git.plugh.de/Garmelon/vault.git"
tag = "v0.4.0"
features = ["tokio"]

[workspace.lints]
rust.unsafe_code = { level = "forbid", priority = 1 }
# Lint groups
rust.deprecated-safe = "warn"
rust.future-incompatible = "warn"
rust.keyword-idents = "warn"
rust.nonstandard-style = "warn"
rust.refining-impl-trait = "warn"
rust.rust-2018-idioms = "warn"
rust.unknown-or-malformed-diagnostic-attributes = "warn"
rust.unused = "warn"
# Individual lints
rust.redundant_imports = "warn"
rust.redundant_lifetimes = "warn"
rust.single_use_lifetimes = "warn"
rust.unit_bindings = "warn"
rust.unnameable_types = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
# Clippy
clippy.use_self = "warn"

[profile.dev.package."*"]
opt-level = 3
