[package]
name = "cove"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
cookie = { workspace = true }
cove-config = { workspace = true }
cove-input = { workspace = true }
crossterm = { workspace = true }
directories = { workspace = true }
euphoxide = { workspace = true }
jiff = { workspace = true }
linkify = { workspace = true }
log = { workspace = true }
open = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toss = { workspace = true }
unicode-width = { workspace = true }
vault = { workspace = true }

[lints]
workspace = true
